tests/baselines/reference/parserAmbiguity2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Generics/parserAmbiguity2.ts (4 errors) ====
    f(g<A, B>7);
    ~
!!! error TS2304: Cannot find name 'f'.
      ~
!!! error TS2304: Cannot find name 'g'.
        ~
!!! error TS2304: Cannot find name 'A'.
           ~
!!! error TS2304: Cannot find name 'B'.